Add search bar and authors

--- a/_posts/2020-03-03-basic-bof.md
+++ b/_posts/2020-03-03-basic-bof.md
@@ -1,4 +1,5 @@
 ---
+author: george_pick
 layout: post
 title: "Basic Buffer Overflow Vulnerability"
 excerpt: "pwnable.kr challenge: bof"
@@ -17,7 +18,7 @@ See:
 * [Brief overview of why gets is bad](https://faq.cprogramming.com/cgi-bin/smartfaq.cgi?answer=1049157810&id=1043284351).
 * [University of Maryland paper on the Morris worm](https://www.cs.umd.edu/class/fall2019/cmsc818O/papers/morris-worm.pdf) (unrelated directly to this challenge, but that worm used a `gets` vulnerability in Fingerd.
 
-### Given
+## Given
 
 So for this, we're given two downloads, which look to be an executable and the c source code for that executable:
 * Executable -- `http://pwnable.kr/bin/bof`
@@ -26,7 +27,7 @@ So for this, we're given two downloads, which look to be an executable and the c
 And then a location of which the vulnerable program is currently running:
 * `nc pwnable.kr 9000`
 
-### First, download and try out
+## First, download and try out
 
 ```bash
 # Just store in current working dir as same name
@@ -53,7 +54,7 @@ So it does look like it's taking input. And passed on that, something we need to
 
 I assume the executable `bof` is what's running at that destination, so lets look at the source.
 
-### Inspect files
+## Inspect files
 
 `bof`:
 
@@ -69,7 +70,7 @@ So again, executable. [Specifically](https://www.linuxtopia.org/online_books/an_
 * `ELF` -- [Executable and Linkable Format](https://en.wikipedia.org/wiki/Executable_and_Linkable_Format); man page [here](http://man7.org/linux/man-pages/man5/elf.5.html). See [here](https://en.wikipedia.org/wiki/Comparison_of_executable_file_formats) for a comparison of executable file formats; for now, it doesn't mean much to us.
 * `not stripped` is a reference to the fact that when compiled, extra debug information not necesarry for the execution of the file (aka symbol table). See [the manpage for strip](https://linux.die.net/man/1/strip) for more info on options.
 
-### Run it
+## Run it
 
 ```bash
 ./bof
@@ -117,7 +118,7 @@ int main(int argc, char* argv[]){
 ```
 So, we're dealing with two functions, `main` and `func`.
 
-### `main`
+## `main`
 
 Immediately calling `func` with argument `0xdeadbeef`:
 
@@ -125,21 +126,21 @@ Immediately calling `func` with argument `0xdeadbeef`:
 	func(0xdeadbeef);
 ```
 
-### `func`
+## `func`
 We see it's parameter is an `int`. It first defines a `char` buffer, of size 32 bytes in length (31 for data, plus one for the null terminator), named `overflowme`.
 
 Then, it prints the overflow me message, after which it uses `gets` to read user input into the `char` buffer.
 
 Lastly, it compares the value of `key` (which is the passed in value of the function to `0xcafebabe`, and if so gives us a shell (to which we can cat the flag.
 
-### Takeaway
+## Takeaway
 We need to pass in a value that will get read in with `gets` such that we overflow the buffer, and replace wherever the key is living in memory with `0xcafebabe`. This is because `gets` is for bad guys:
 
 > gets() has only received the name of the array (a pointer), it does not know how big the array is, and it is impossible to determine this from the pointer alone. When the user enters their text, gets() will read all available data into the array, this will be fine if the user is sensible and enters less than 99 bytes. However, if they enter more than 99, gets() will not stop writing at the end of the array. Instead, it continues writing past the end and into memory it doesn't own.
 
 So we're going to need to pass in some amount of data, and then `0xcafebabe` at the right spot such that we clobber the original value of `key`.
 
-### First, we gotta find where things are
+## First, we gotta find where things are
 
 Need to inspect the executable while it's running to see where certain values live in memory. Mainly, where `key` gets stored relative to where our input that gets read in via `gets` is stored, so that we know how much to enter before sending the `0xcafebabe`.
 
@@ -341,7 +342,7 @@ readelf - get information about the elf file
 ```
 OK - telescope looks of interest.
 
-### telescope
+## telescope
 
 Looks like in `peda` we can use `telescope XXXX` to view `XXXX` lines ahead of the stack:
 
@@ -359,7 +360,7 @@ gdb-peda$ telescope 50
 
 Hey, look, there's `deadbeef`! Sitting at `0xffffd710` And our input, which looks to start at `0xffffd6dc`.
 
-### gdb -- x/?x $sp - show stack memory
+## gdb -- x/?x $sp - show stack memory
 
 We can also use `x/?x $sp` where `?` is an integer to represent the number of **words** to be shown on the stack:
 
@@ -389,7 +390,7 @@ python
 
 Which matches what peda showed.
 
-### X marks the spot
+## X marks the spot
 
 OK - so we know `deadbeef` lives at `0xffffd710` and our input starts at `0x0xffffd6dc`. We can figure out what we need to send based on that (like we already did above):
 
@@ -437,7 +438,7 @@ daddy, I just pwned a buFFer :)
 flag is `daddy, I just pwned a buFFer :)`
 
 
-### post-solve note -- pwn python
+## post-solve note -- pwn python
 So, there's usually lots of ways to solve these types of things. And reading others solutions on the problem after you solve it is sometimes beneficial as well.
 
 In doing other reading as well, I've come across the [pwntools python library](http://docs.pwntools.com/en/stable/).
@@ -447,7 +448,7 @@ In doing other reading as well, I've come across the [pwntools python library](h
 # brew install pwntools
 ```
 
-#### [pwntools - getting started](http://docs.pwntools.com/en/stable/intro.html)
+### [pwntools - getting started](http://docs.pwntools.com/en/stable/intro.html)
 
 ```
 from pwn import *
@@ -535,7 +536,7 @@ $
 ```
 Though, something weird seems to be happening where the first command doesn't register anything?
 
-#### post-post note
+### post-post note
 
 Duh -- the above "first command not working" is because when we use `.send` to send our payload, we're not including a newline at the end of the input.
 
