Update references to new CTF practice repo

--- a/_posts/2020-03-18-coin-game.md
+++ b/_posts/2020-03-18-coin-game.md
@@ -108,7 +108,7 @@ I wrote some pseudo code/thought process out:
 ![]({{ site.baseurl }}/img/coin_pseudo_code.jpg){:height="40%" width="40%"}
 &nbsp;
 
-The implementation is up to the reader as an excercise. (Though my implementation is [here](https://github.com/bigpick/pwnable.kr/blob/master/toddlersbottle/11_coin1/coin_pwn.py))
+The implementation is up to the reader as an excercise. (Though my implementation is [here](https://github.com/bigpick/CaptureTheFlagCode/blob/master/practice/pwnable.kr/toddlersbottle/11_coin1/coin_pwn.py))
 
 Running it:
 
